--- a/research.html
+++ b/research.html
@@ -28,30 +28,22 @@
       <div class="container">
         <h2>Research</h2>
 
-        <!-- Tabs -->
-        <div class="tab-container">
-          <button class="tab active" onclick="openTab(event, 'proj1')">Project One</button>
-          <button class="tab" onclick="openTab(event, 'proj2')">Project Two</button>
-          <button class="tab" onclick="openTab(event, 'proj3')">Project Three</button>
-        </div>
-
-        <!-- Tab Content -->
-        <div id="proj1" class="tab-content active">
-          <h3>Research Project One</h3>
+        <button class="accordion">Research Project One</button>
+        <div class="panel">
           <p>
             Description of your first research project. Explain the problem statement, your role, and outcomes.
           </p>
         </div>
 
-        <div id="proj2" class="tab-content">
-          <h3>Research Project Two</h3>
+        <button class="accordion">Research Project Two</button>
+        <div class="panel">
           <p>
             Description of your second research project. Include tools, methodology, and results.
           </p>
         </div>
 
-        <div id="proj3" class="tab-content">
-          <h3>Research Project Three</h3>
+        <button class="accordion">Research Project Three</button>
+        <div class="panel">
           <p>
             Description of your third research project. Highlight impact, papers, or presentations.
           </p>
