--- a/research.html
+++ b/research.html
@@ -23,35 +23,45 @@
   </header>
 
   <!-- Research Section -->
-  <main>
-    <section id="research" class="research">
-      <div class="container">
-        <h2>Research</h2>
+ <main>
+  <section id="research" class="research">
+    <div class="container">
+      <h2>Research</h2>
 
-        <button class="accordion">Research Project One</button>
-        <div class="panel">
-          <p>
-            Description of your first research project. Explain the problem statement, your role, and outcomes.
-          </p>
-        </div>
-
-        <button class="accordion">Research Project Two</button>
-        <div class="panel">
-          <p>
-            Description of your second research project. Include tools, methodology, and results.
-          </p>
-        </div>
-
-        <button class="accordion">Research Project Three</button>
-        <div class="panel">
-          <p>
-            Description of your third research project. Highlight impact, papers, or presentations.
-          </p>
-        </div>
-
+      <button class="accordion">
+        <span>Research Project One</span>
+        <span class="chevron">▼</span>
+      </button>
+      <div class="panel">
+        <p>
+          Description of your first research project. Explain the problem statement, your role, and outcomes.
+        </p>
       </div>
-    </section>
-  </main>
+
+      <button class="accordion">
+        <span>Research Project Two</span>
+        <span class="chevron">▼</span>
+      </button>
+      <div class="panel">
+        <p>
+          Description of your second research project. Include tools, methodology, and results.
+        </p>
+      </div>
+
+      <button class="accordion">
+        <span>Research Project Three</span>
+        <span class="chevron">▼</span>
+      </button>
+      <div class="panel">
+        <p>
+          Description of your third research project. Highlight impact, papers, or presentations.
+        </p>
+      </div>
+
+    </div>
+  </section>
+</main>
+
 
   <!-- Footer -->
   <footer>
