--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
       <h2>Research</h2>
 
       <button class="accordion">
-        <span>Research Project One</span>
+        <span>Characterization and Conversion of Animal Fat to PCM for TES</span>
         <span class="chevron">▼</span>
       </button>
       <div class="panel">
@@ -39,7 +39,7 @@
       </div>
 
       <button class="accordion">
-        <span>Research Project Two</span>
+        <span>Design of Plasmonic Chemical Sensor</span>
         <span class="chevron">▼</span>
       </button>
       <div class="panel">
@@ -49,7 +49,7 @@
       </div>
 
       <button class="accordion">
-        <span>Research Project Three</span>
+        <span>Characterizing the Vibrational Response of a Fuel Injector</span>
         <span class="chevron">▼</span>
       </button>
       <div class="panel">
