--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
           <div class="slide fade">
             <img src="images/project1.jpg" alt="Project One">
             <div class="caption">
-              <h3>Project One</h3>
+              <h3>Redesigning Soccer Cleats to Reduce ACL Tears in Female Athletes</h3>
               <p>Short description of this project goes here. Highlight tools or impact.</p>
               <a href="#" target="_blank">View Project</a>
             </div>
@@ -44,7 +44,7 @@
           <div class="slide fade">
             <img src="images/project2.jpg" alt="Project Two">
             <div class="caption">
-              <h3>Project Two</h3>
+              <h3>Automated Robotic Linkage Mechanism</h3>
               <p>Another project description with a few sentences of context.</p>
               <a href="#" target="_blank">View Project</a>
             </div>
@@ -52,7 +52,7 @@
 
           <!-- Project 3 -->
           <div class="slide fade">
-            <img src="images/project3.jpg" alt="Project Three">
+            <img src="images/project3.jpg" alt="CloudBot | Bipedal Robot">
             <div class="caption">
               <h3>Project Three</h3>
               <p>Explain the problem solved, technologies used, or outcome.</p>
