--- a/projects.html
+++ b/projects.html
@@ -23,58 +23,59 @@
   </header>
 
   <!-- Projects Section -->
-  <main>
-    <section id="projects" class="projects">
-      <div class="container">
-        <h2>Projects</h2>
+ <main>
+  <section id="projects" class="projects">
+    <div class="container">
+      <h2>Projects</h2>
 
-        <div class="slideshow-container">
-
-          <!-- Project 1 -->
-          <div class="slide fade">
-            <img src="images/project1.jpg" alt="Project One">
-            <div class="caption">
-              <h3>Redesigning Soccer Cleats to Reduce ACL Tears in Female Athletes</h3>
-              <p>Short description of this project goes here. Highlight tools or impact.</p>
-              <a href="#" target="_blank">View Project</a>
-            </div>
-          </div>
-
-          <!-- Project 2 -->
-          <div class="slide fade">
-            <img src="images/project2.jpg" alt="Project Two">
-            <div class="caption">
-              <h3>Automated Robotic Linkage Mechanism</h3>
-              <p>Another project description with a few sentences of context.</p>
-              <a href="#" target="_blank">View Project</a>
-            </div>
-          </div>
-
-          <!-- Project 3 -->
-          <div class="slide fade">
-            <img src="images/project3.jpg" alt="CloudBot | Bipedal Robot">
-            <div class="caption">
-              <h3>Project Three</h3>
-              <p>Explain the problem solved, technologies used, or outcome.</p>
-              <a href="#" target="_blank">View Project</a>
-            </div>
-          </div>
-
-          <!-- Navigation Arrows -->
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-
-        <!-- Dots for navigation -->
-        <div class="dots">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
-
+      <!-- Project navigation buttons -->
+      <div class="project-buttons">
+        <button onclick="currentSlide(1)">Project One</button>
+        <button onclick="currentSlide(2)">Project Two</button>
+        <button onclick="currentSlide(3)">Project Three</button>
       </div>
-    </section>
-  </main>
+
+      <!-- Slideshow -->
+      <div class="slideshow-container">
+
+        <!-- Project 1 -->
+        <div class="slide fade">
+          <img src="images/project1.jpg" alt="Project One">
+          <div class="caption">
+            <h3>Redesigning soccer cleats</h3>
+            <p>Short description of this project goes here.</p>
+            <a href="#" target="_blank">View Project</a>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="slide fade">
+          <img src="images/project2.jpg" alt="Project Two">
+          <div class="caption">
+            <h3>Automated robotic linkage mechanism</h3>
+            <p>Description of project two with details.</p>
+            <a href="#" target="_blank">View Project</a>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="slide fade">
+          <img src="images/project3.jpg" alt="Project Three">
+          <div class="caption">
+            <h3>CloudBot | Bipedal Robot</h3>
+            <p>Highlight technologies or impact here.</p>
+            <a href="#" target="_blank">View Project</a>
+          </div>
+        </div>
+
+        <!-- Navigation Arrows -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+    </div>
+  </section>
+</main>
+
 
   <!-- Footer -->
   <footer>
