--- a/index.html
+++ b/index.html
@@ -35,103 +35,6 @@
     </div>
   </section>
 
-<!-- Resume / Experience -->
-<section id="resume" class="experience">
-  <div class="container">
-    <h2>Experience</h2>
-
-    <!-- Lockheed Martin -->
-    <div class="exp-item">
-      <img src="images/lockheed.png" alt="Lockheed Martin Logo" class="company-logo">
-      <div class="exp-content">
-        <div class="exp-header">
-          <h3>Lockheed Martin</h3>
-          <span class="exp-date">August 2025 – Present</span>
-        </div>
-        <h4>Opto-Mechanical Engineer</h4>
-
-        <div class="exp-header">
-          <h4>Opto-Mechanical Engineer Associate</h4>
-          <span class="exp-date">July 2023 – August 2025</span>
-        </div>
-        <ul>
-          <li>Lead and support complex mechanical design and documentation for opto-mechanical subsystems throughout various stages of the lifecycle.</li>
-          <li>Serve as one of two DSR6 drawing checkers for a site of 200 employees, reviewing drawings to ensure quality standards and support digital drawing workflows.</li>
-          <li>Deliver and participate in technical presentations to subject matter experts and stakeholders, contributing to design reviews, securing approvals, and advancing key program milestones.</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- ThermoKing Americas -->
-    <div class="exp-item">
-      <img src="images/thermoking.png" alt="ThermoKing Logo" class="company-logo">
-      <div class="exp-content">
-        <div class="exp-header">
-          <h3>ThermoKing Americas</h3>
-          <span class="exp-date">May 2022 – August 2022</span>
-        </div>
-        <h4>Platform Systems Engineering Intern</h4>
-        <ul>
-          <li>Contributed to platform systems engineering work for commercial transport refrigeration products.</li>
-          <li>Co-authored system documentation, including requirements and validation criteria used across testing and build phases to support engineering, service, and commercial teams.</li>
-          <li>Helped improve communication across subsystem teams by organizing shared technical information.</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Columbia University -->
-    <div class="exp-item">
-      <img src="images/columbia.png" alt="Columbia University Logo" class="company-logo">
-      <div class="exp-content">
-        <div class="exp-header">
-          <h3>Columbia University</h3>
-          <span class="exp-date">September 2021 – May 2023</span>
-        </div>
-        <h4>Teaching Assistant for Computer Graphics and Design</h4>
-        <ul>
-          <li>Supported instruction for a course on computer graphics and design, leading recitations and office hours to assist students with CAD, GD&T, and SolidWorks-based design challenges.</li>
-        </ul>
-
-        <div class="exp-header">
-          <h4>Student Intern for the Office for the EVP for Research</h4>
-          <span class="exp-date">September 2019 – May 2021</span>
-        </div>
-        <ul>
-          <li>Analyzed and visualized federal research funding trends using Python and Excel, providing actionable insights to inform university funding strategies.</li>
-        </ul>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-  <!-- Projects -->
-  <section id="projects" class="projects">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project-grid">
-        <div class="project-card">
-          <img src="images/project1.jpg" alt="Project One" />
-          <h3>Project One</h3>
-          <p>XXXXXXXXXX.</p>
-          <a href="#" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-          <img src="images/project2.jpg" alt="Project Two" />
-          <h3>Project Two</h3>
-          <p>XXXXXXXXXXX.</p>
-          <a href="#" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-          <img src="images/project3.jpg" alt="Project Three" />
-          <h3>Project Three</h3>
-          <p>XXXXXXXXXXXXXXXX.</p>
-          <a href="#" target="_blank">View Project</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- About -->
   <section id="about" class="about">
     <div class="container">
@@ -149,8 +52,8 @@
     <div class="container">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:youremail@example.com">christinejzou56@gmail.com</a></p>
-      <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/yourprofile</a></p>
-      <p>GitHub: <a href="#" target="_blank">github.com/yourusername</a></p>
+      <p>LinkedIn: <a href="#" target="_blank">https://www.linkedin.com/in/christine-zou-374807188/</a></p>
+      <p>GitHub: <a href="#" target="_blank">github.com/christine-zou</a></p>
     </div>
   </section>
 
