--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,13 @@
           
           <div class="caption">
             <h3>Redesigning Soccer Cleats to Reduce ACL Tears in Female Athletes</h3>
-            <p>Short description of this project goes here.</p>
+            <p><b>Abstract &mdash; </b>This research study aims to redesign soccer cleats for female soccer players to reduce the likelihood of anterior cruciate ligament 
+              (ACL) tears. Females are up to eight times more likely to tear their ACL in comparison to males, and soccer cleats are mainly designed for men with women's 
+              cleats lacking comfort and performance. We propose an alternative design by varying the density of the outsole to relieve pressure off the knee. Our design 
+              redistributes the forces on the foot to achieve an optimal valgus and knee flexion angle, putting female soccer players less at risk, thus reducing the forces 
+              that lead to ACL injuries. Seven different outsole density patterns were designed based on the Nike Premier FG 3 and then printed with Ultimakers out of 
+              thermoplastic polyurethane using support blockers in Cura. Each pattern was tested on five athletic young adult females. The knee flexion and valgus angles 
+              were measured using a virtual reality tracking system as the subjects performed actions of walking, running, and jumping.</p>
             
           </div>
         </div>
