--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,11 @@
 
         <!-- Project 1 -->
         <div class="slide fade">
-          
-          <div class="caption">
-            <h3>Redesigning Soccer Cleats to Reduce ACL Tears in Female Athletes</h3>
-            <p><b>Abstract &mdash; </b>This research study aims to redesign soccer cleats for female soccer players to reduce the likelihood of anterior cruciate ligament 
+          <h3 class = "project-title">Redesigning Soccer Cleats to Reduce ACL Tears in Female Athletes</h3>
+          <div class = "project-two-col">
+            <div class="project-text">
+            <p>
+              <b>Abstract &mdash; </b>This research study aims to redesign soccer cleats for female soccer players to reduce the likelihood of anterior cruciate ligament 
               (ACL) tears. Females are up to eight times more likely to tear their ACL in comparison to males, and soccer cleats are mainly designed for men with women's 
               cleats lacking comfort and performance. We propose an alternative design by varying the density of the outsole to relieve pressure off the knee. Our design 
               redistributes the forces on the foot to achieve an optimal valgus and knee flexion angle, putting female soccer players less at risk, thus reducing the forces 
@@ -51,6 +52,10 @@
               thermoplastic polyurethane using support blockers in Cura. Each pattern was tested on five athletic young adult females. The knee flexion and valgus angles 
               were measured using a virtual reality tracking system as the subjects performed actions of walking, running, and jumping.</p>
             
+              </div>
+          <div class = "project-media">
+            <img src = "images/cleat3.png" alt = "Final Cleat">
+            </div>
           </div>
         </div>
 
@@ -75,8 +80,7 @@
         </div>
 
         <!-- Navigation Arrows -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
       </div>
     </div>
   </section>
