--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,7 @@
               </div>
           <div class = "project-media">
             <img src = "images/cleat3.png" alt = "Final Cleat">
+            <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
             </div>
           </div>
         </div>
