--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,9 @@
             <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
             </div>
           </div>
+          <div class = "project=full">
+            <img src = "images/seniordesign_poster.png" alt "Senior Design Poster">
+          </div>
         </div>
 
         <!-- Project 2 -->
