--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,9 @@
               that lead to ACL injuries. Seven different outsole density patterns were designed based on the Nike Premier FG 3 and then printed with Ultimakers out of 
               thermoplastic polyurethane using support blockers in Cura. Each pattern was tested on five athletic young adult females. The knee flexion and valgus angles 
               were measured using a virtual reality tracking system as the subjects performed actions of walking, running, and jumping.</p>
-            
+            <p>
+              Read final report <a href="files/seniordesign_soccercleat.pdf" target="_blank">here</a> or check out our <a href="https://nsm2154.wixsite.com/team-16" target="_blank">project website.</a>
+            </p>
               </div>
           <div class = "project-media">
             <img src = "images/cleat3.png" alt = "Final Cleat">
@@ -59,7 +61,7 @@
             </div>
           </div>
           <div class = "project=full">
-            <img src = "images/seniordesign_poster.png" alt "Senior Design Poster">
+            <img src = "images/seniordesign_poster.jpeg" alt "Senior Design Poster">
           </div>
         </div>
 
