--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,8 @@
             <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
             </div>
           </div>
-          <div class = "project=full">
+          <div class = "project-full">
+            <h3>Poster</h3>
             <img src = "images/seniordesign_poster.jpeg" alt "Senior Design Poster">
           </div>
         </div>
