--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
               thermoplastic polyurethane using support blockers in Cura. Each pattern was tested on five athletic young adult females. The knee flexion and valgus angles 
               were measured using a virtual reality tracking system as the subjects performed actions of walking, running, and jumping.</p>
             <p>
-              Read final report <a href="files/seniordesign_soccercleat.pdf" target="_blank">here</a> or check out our <a href="https://nsm2154.wixsite.com/team-16" target="_blank">project website.</a>
+              Read our final report for more details <a href="files/seniordesign_soccercleat.pdf" target="_blank">here</a> or check out our project <a href="https://nsm2154.wixsite.com/team-16" target="_blank">website.</a>
             </p>
               </div>
           <div class = "project-media">
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class = "project-full">
-            <h3>Poster</h3>
+            <h2>Poster</h2>
             <img src = "images/seniordesign_poster.jpeg" alt "Senior Design Poster">
           </div>
         </div>
