--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class = "project-full">
-            <h2 class = "subsection-title">Poster</h2>
+            <h2 class = "mini-title">Poster</h2>
             <img src = "images/seniordesign_poster.jpeg" alt "Senior Design Poster">
           </div>
         </div>
