--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,13 @@
           </div>
           <div class = "project-full">
             <h3 class = "mini-title">Poster</h3>
-            <img src = "images/seniordesign_poster.jpeg" alt "Senior Design Poster">
+            <img src="images/seniordesign_poster.jpeg" alt="Senior Design Poster" class="lightbox-trigger">
+
+          </div>
+          <div id = "lightbox" class = "lightbox">
+            <span class="lightbox-close">&times;</span>
+            <img class="lightbox-content" id="lightbox-img">
+            <div id="lightbox-caption"></div>
           </div>
         </div>
 
