--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
         <div class="slide fade">
           
           <div class="caption">
-            <h3>Automated Robotic Linkage Mechanism</h3>
+            <h3 class = "project-title">Automated Robotic Linkage Mechanism</h3>
             <p>Description of project two with details.</p>
             
           </div>
