--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
         <div class="slide fade">
           
           <div class="caption">
-            <h3>CloudBot | Bipedal Robot</h3>
+            <h3 class = "project-title">CloudBot | Bipedal Robot</h3>
             <p>Highlight technologies or impact here.</p>
             
           </div>
