--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
               thermoplastic polyurethane using support blockers in Cura. Each pattern was tested on five athletic young adult females. The knee flexion and valgus angles 
               were measured using a virtual reality tracking system as the subjects performed actions of walking, running, and jumping.</p>
             <p>
-              Read our final report for more details <a href="files/seniordesign_soccercleat.pdf" target="_blank">here</a> or check out our project <a href="https://nsm2154.wixsite.com/team-16" target="_blank">website.</a>
+              <i>Read our final report for more details <a href="files/seniordesign_soccercleat.pdf" target="_blank">here</a> or check out our project <a href="https://nsm2154.wixsite.com/team-16" target="_blank">website.</a></i>
             </p>
               </div>
           <div class = "project-media">
@@ -69,11 +69,13 @@
 
         <!-- Project 2 -->
         <div class="slide fade">
-          
-          <div class="caption">
             <h3 class = "project-title">Automated Robotic Linkage Mechanism</h3>
-            <p>Description of project two with details.</p>
-            
+          <div class = "project-two-col">
+            <div class = "project-text">
+            <p><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</p>
+            </div>
+            <div class = "project media">
+              <img src = "images/mdfinal.png" alt = "Final Linkage System">
           </div>
         </div>
 
