--- a/projects.html
+++ b/projects.html
@@ -74,8 +74,9 @@
             <div class = "project-text">
             <p><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</p>
             </div>
-            <div class = "project media">
+            <div class = "project-media">
               <img src = "images/mdfinal.png" alt = "Final Linkage System">
+            </div>
           </div>
         </div>
 
