--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,7 @@
           <div class = "project-full">
             <p><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</p>
             <img src = "images/mdfinal.png" alt = "Final Linkage System">
+            <h3 class = "mini-title">Design Concept</h3>
           </div>
           <div class="image-row">
             <img src="images/mdtransangle1.png" alt="Transmission angle 1">
