--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
         <div class="slide fade">
             <h3 class = "project-title">Automated Robotic Linkage Mechanism</h3>
           <div class = "project-full">
-            <p><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</p>
+            <h5><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</h5>
             <img src = "images/mdfinal.png" alt = "Final Linkage System">
             <h3 class = "mini-title">Design Concept</h3>
           </div>
