--- a/projects.html
+++ b/projects.html
@@ -72,13 +72,25 @@
             <h3 class = "project-title">Automated Robotic Linkage Mechanism</h3>
           <div class = "project-full">
             <h5><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</h5>
-            <img src = "images/mdfinal.png" alt = "Final Linkage System">
+            <div class = "image-container">
+              <img src = "images/mdfinal.png" alt = "Final Linkage System">
+              <div class = "caption">Final Linkage Assembly</div>
+            </div>
             <h3 class = "mini-title">Design Concept</h3>
           </div>
           <div class="image-row">
-            <img src="images/mdtransangle1.png" alt="Transmission angle 1">
-            <img src="images/mdtransangle1.png" alt="Transmission angle 2">
-            <img src="images/mdtransangle1.png" alt="Transmission angle 3">
+            <div class = "image-container">
+              <img src="images/mdtransangle1.png" alt="Transmission angle 1">
+              <div class="caption">Position 1</div>
+            </div>
+            <div class = "image-container">
+              <img src="images/mdtransangle2.png" alt="Transmission angle 2">
+              <div class="caption">Position 2</div>
+            </div>
+            <div class = "image-container">
+              <img src="images/mdtransangle3.png" alt="Transmission angle 3">
+              <div class="caption">Position 3</div>
+            </div>
             
           </div>
 
