--- a/projects.html
+++ b/projects.html
@@ -71,12 +71,14 @@
         <div class="slide fade">
             <h3 class = "project-title">Automated Robotic Linkage Mechanism</h3>
           <div class = "project-full">
-            <h5><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</h5>
+            <h4><b>Objective &mdash; </b>Design, build, and test an automated linkage mechanism that presses arcade buttons as they light up as rapidly as possible within one minute.</h4>
             <div class = "image-container">
               <img src = "images/mdfinal.png" alt = "Final Linkage System">
               <div class = "caption">Final Linkage Assembly</div>
             </div>
             <h3 class = "mini-title">Design Concept</h3>
+            <p>We started by individually brainstorming linkage angles with select anchor points in the given area and then discussed as a team to decide which was the most ideal. 
+              Our final design uses the three positions displayed below.</p>
           </div>
           <div class="image-row">
             <div class = "image-container">
