--- a/projects.html
+++ b/projects.html
@@ -102,9 +102,9 @@
               We each fabricated different parts (links, ground plate, hard stops, etc.) utilizing the lathe and CNC mill in the machine shop and 3D FFF printing.
             </div>
             <div class = "project-media">
-              <img src = "images/machinedesignassy.png alt = "CAD model">
-              <img src = "images/machinedesignlink.jpg alt = "Link">
-              <img src = "images/mdbuttonpress.png alt "Button Press Piece">
+              <img src = "images/machinedesignassy.png" alt = "CAD model">
+              <img src = "images/machinedesignlink.jpg" alt = "Link">
+              <img src = "images/mdbuttonpress.png" alt = "Button Press Piece">
             </div>
           </div>
         </div>
