--- a/projects.html
+++ b/projects.html
@@ -101,11 +101,22 @@
               We each modeled separate parts within the assembly as shown on the right. 
               We each fabricated different parts (links, ground plate, hard stops, etc.) utilizing the lathe and CNC mill in the machine shop and 3D FFF printing.
             </div>
-            <div class = "project-media">
-              <img src = "images/machinedesignassy.png" alt = "CAD model">
-              <img src = "images/machinedesignlink.jpg" alt = "Link">
-              <img src = "images/mdbuttonpress.png" alt = "Button Press Piece">
+            <div class = "project-media image-row">
+              <div class = "image-container">
+                <img src = "images/machinedesignassy.png" alt = "CAD model">
+                <div class = "caption">CAD Assembly Model</div>
+              </div>
             </div>
+          </div>
+          <div class="image-row">
+            <div class = "image-container">
+              <img src = "images/machinedesignlink.jpg" alt = "Link">
+              <div class="caption">Link assembled with gear</div>
+            </div>
+            <div class = "image-container">
+              <img src = "images/mdbuttonpress.png" alt = "Button Press Piece">
+              <div class="caption">Button Press piece (primarily 3D printed)</div>
+            </div>            
           </div>
         </div>
 
