--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
               We each modeled separate parts within the assembly as shown on the right. 
               We each fabricated different parts (links, ground plate, hard stops, etc.) utilizing the lathe and CNC mill in the machine shop and 3D FFF printing.
             </div>
-            <div class = "project-media image-row">
+            <div class = "project-media">
               <div class = "image-container">
                 <img src = "images/machinedesignassy.png" alt = "CAD model">
                 <div class = "caption">CAD Assembly Model</div>
