--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,14 @@
             </p>
               </div>
           <div class = "project-media">
-            <img src = "images/cleat3.png" alt = "Final Cleat">
+            <div class = "image-container">
+                <img src = "images/cleat3.png" alt = "Final Cleat">
+                <div class = "caption">Assembled Cleat</div>
+              </div>
+            <div class = "image-container">
+                <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
+                <div class = "caption">Senior Design Team</div>
+              </div>
             <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
             </div>
           </div>
