--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,10 @@
           </div>
           <div class = "project-full">
             <h3 class = "mini-title">Poster</h3>
-            <img src="images/seniordesign_poster.jpeg" alt="Senior Design Poster">
+            <div class = "image-container">
+                <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
+                <div class = "caption">Senior Design Team</div>
+            </div>
 
           </div>
         </div>
