--- a/projects.html
+++ b/projects.html
@@ -64,14 +64,13 @@
                 <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
                 <div class = "caption">Senior Design Team</div>
               </div>
-            <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
             </div>
           </div>
           <div class = "project-full">
             <h3 class = "mini-title">Poster</h3>
             <div class = "image-container">
-                <img src = "images/seniordesign.jpg" alt = "Senior Design Team">
-                <div class = "caption">Senior Design Team</div>
+                <img src = "images/seniordesign_poster.jpeg" alt = "Poster">
+                <div class = "caption">Senior Design Final Poster</div>
             </div>
 
           </div>
