--- a/projects.html
+++ b/projects.html
@@ -108,8 +108,8 @@
 
           <div class = "project-two-col">
             <div class = "project-text">
-              We each modeled separate parts within the assembly as shown on the right. 
-              We each fabricated different parts (links, ground plate, hard stops, etc.) utilizing the lathe and CNC mill in the machine shop and 3D FFF printing.
+              The final CAD assembly model is shown on the right. We each modeled and fabricated different parts utilizing the lathe and CNC mill in the machine shop and 3D printing. Below on the left is a link I machined and assembled with a gear. 
+              Next to it is our final button pressing mechanism that was 3D printed with an additional acrylic piece glued on for the bonus green button.
             </div>
             <div class = "project-media">
               <div class = "image-container">
@@ -128,6 +128,20 @@
               <div class="caption">Button Press piece (primarily 3D printed)</div>
             </div>            
           </div>
+          <div class = "project-two-col">
+            <div class = "project-media">
+              <div class="video-container">
+                <iframe 
+                  src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/view?usp=sharing"
+                  width="450"
+                  height="800"
+                  allow="autoplay">
+                </iframe>
+
+              </div>
+            </div>
+            <div class = "project-text">
+            </div>
         </div>
 
         <!-- Project 3 -->
