--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
             <div class = "project-media">
               <div class="video-container">
                 <iframe 
-                  src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/view?usp=sharing"
+                  src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/preview"
                   width="450"
                   height="800"
                   allow="autoplay">
