--- a/projects.html
+++ b/projects.html
@@ -126,11 +126,15 @@
             <div class = "image-container">
               <img src = "images/mdbuttonpress.png" alt = "Button Press Piece">
               <div class="caption">Button Press piece (primarily 3D printed)</div>
-            </div>            
+            </div> 
+            <div class = "image-container">
+              <img src = "images/mdelectronics.jpeg" alt = "Electronic Setup">
+              <div class="caption">Electronic Setup</div>
+            </div>   
           </div>
           <div class = "project-two-col">
             <div class = "project-media">
-              <div class="video-container">
+              <div class="video-container vertical">
                 <iframe 
                   src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/preview"
                   width="450"
