--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,8 @@
           <div class = "project-two-col">
             <div class = "project-text">
               The final CAD assembly model is shown on the right. We each modeled and fabricated different parts utilizing the lathe and CNC mill in the machine shop and 3D printing. Below on the left is a link I machined and assembled with a gear. 
-              Next to it is our final button pressing mechanism that was 3D printed with an additional acrylic piece glued on for the bonus green button.
+              Next to it is our final button pressing mechanism that was 3D printed with an additional acrylic piece glued on for the bonus green button. The wiring I setup and tested &mdash; admittedly organization and cleanliness was
+              not a priority as we ended up having bigger issues.
             </div>
             <div class = "project-media">
               <div class = "image-container">
@@ -137,8 +138,6 @@
               <div class="video-container vertical">
                 <iframe 
                   src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/preview"
-                  width="450"
-                  height="800"
                   allow="autoplay">
                 </iframe>
 
