--- a/projects.html
+++ b/projects.html
@@ -135,13 +135,14 @@
           </div>
           <div class = "project-two-col">
             <div class = "project-media">
-              <div class="video-container vertical">
-                <iframe 
-                  src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/preview"
-                  allow="autoplay">
-                </iframe>
-
-              </div>
+                <div class="video-mask">
+                  <iframe
+                    src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/preview"
+                    frameborder="0"
+                    allow="autoplay; fullscreen"
+                    allowfullscreen>
+                  </iframe>
+                </div>
             </div>
             <div class = "project-text">
             </div>
