--- a/projects.html
+++ b/projects.html
@@ -135,14 +135,15 @@
           </div>
           <div class = "project-two-col">
             <div class = "project-media">
-                <div class="video-mask">
-                  <iframe
-                    src="https://drive.google.com/file/d/1bDJ6ihIPJocLnhPglSkdtJduvjENLhOp/preview"
-                    frameborder="0"
-                    allow="autoplay; fullscreen"
-                    allowfullscreen>
-                  </iframe>
-                </div>
+              <div class="video-container vertical">
+                <iframe 
+                  src="https://www.youtube.com/embed/t_6y0Fk8vc0"
+                  title="Final Machine Design Linkage"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+                </iframe>
+              </div>
             </div>
             <div class = "project-text">
             </div>
