--- a/projects.html
+++ b/projects.html
@@ -133,8 +133,37 @@
               <div class="caption">Electronic Setup</div>
             </div>   
           </div>
-          <div class = "project-two-col">
-            <div class = "project-media">
+          <div class = "project-full">
+            <h3 class = "mini-title">Where things went wrong!</h3>
+            <p>Unfortunately after assembly, when I was testing the assembly and making sure the electronics were working properly, I realized our transmission ratio was essentially too small, and our belt was slipping
+            because it wasn't able to pull the linkage back up from the limits. We first tried to see if we could increase the tension in the belt as shown in the images below. However, the tension needed wasn't able to be
+            maintained with this solution.</p>
+          </div>
+          <div class="image-row">
+            <div class = "image-container">
+              <img src = "images/mdsolution1.png" alt = "Solution 1">
+              <div class="caption">Belt Tensioning Test Position 1</div>
+            </div>
+            <div class = "image-container">
+              <img src = "images/mdsolution2.png" alt = "Solution 2">
+              <div class="caption">Belt Tensioning Test Position 2</div>
+            </div> 
+          </div>
+           <div class = "project-two-col">
+             <div class = "project-text">
+                <p>While my team tried to find (mostly brute force) methods to maintain the necessary tension for the following 1-2 days, I worked on the Arduino code for the assembly so we could jump into 
+                testing immediately once the mechanical issues were solved. However, we reached the night before and it still didn't function properly. I carefully raked through all the drawers in the lab again
+                to see what spare parts there were laying around that we could use. Pictured on the right &mdash; our saving grace. I found a gear that had the same shape gear as ours but would increase our transmission ratio.
+                We had to modify it slightly but we were able to replace our gear with it easily. </p>
+             </div>
+             <div class = "project-media">
+               <div class = "image-container">
+              <img src = "images/machinedesignhope.png" alt = "The gear of hope">
+              <div class="caption">The Gear of Hope</div>
+                </div>
+             </div>
+          </div>
+          <div class = "project-full">
               <div class="video-container vertical">
                 <iframe 
                   src="https://www.youtube.com/embed/t_6y0Fk8vc0"
@@ -144,9 +173,6 @@
                   allowfullscreen>
                 </iframe>
               </div>
-            </div>
-            <div class = "project-text">
-            </div>
         </div>
 
         <!-- Project 3 -->
