--- a/projects.html
+++ b/projects.html
@@ -164,6 +164,7 @@
              </div>
           </div>
           <div class = "project-full">
+            <h3 class = "mini-title">Success at last</h3>
               <div class="video-container vertical">
                 <iframe 
                   src="https://www.youtube.com/embed/t_6y0Fk8vc0"
