--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,7 @@
              <div class = "project-text">
                 <p>While my team tried to find (mostly brute force) methods to maintain the necessary tension for the following 1-2 days, I worked on the Arduino code for the assembly so we could jump into 
                 testing immediately once the mechanical issues were solved. However, we reached the night before and it still didn't function properly. I carefully raked through all the drawers in the lab again
-                to see what spare parts there were laying around that we could use. Pictured on the right &mdash; our saving grace. I found a gear that had the same shape gear as ours but would increase our transmission ratio.
+                to see what spare parts there were laying around that we could use. Pictured on the right &mdash; our saving grace. I found a gear that had the same teeth as ours but would increase our transmission ratio.
                 We had to modify it slightly (drill a hole through it to take out the press pin in it as shown on the right) but we were able to replace our gear with it easily. </p>
              </div>
              <div class = "project-media">
