--- a/projects.html
+++ b/projects.html
@@ -174,6 +174,7 @@
                   allowfullscreen>
                 </iframe>
               </div>
+          </div>
         </div>
 
         <!-- Project 3 -->
