--- a/projects.html
+++ b/projects.html
@@ -197,12 +197,14 @@
             </div>
               
              <div class = "project-full">
+               <h3 class = "mini-title">From Sketch to CAD</h3>
                 <div class="project-media">
                     <div class = "image-container">
                         <img src = "images/robotrender1.jpg" alt = "Robot Render">
                         <div class = "caption">Initial Robot Design Render</div>
                       </div>
                   </div>
+               
              </div>
               <div class = "image-row">
                 <div class = "image-container">
