--- a/projects.html
+++ b/projects.html
@@ -135,9 +135,9 @@
           </div>
           <div class = "project-full">
             <h3 class = "mini-title">Where things went wrong!</h3>
-            <p>Unfortunately after assembly, when I was testing the assembly and making sure the electronics were working properly, I realized our transmission ratio was essentially too small, and our belt was slipping
-            because it wasn't able to pull the linkage back up from the limits. We first tried to see if we could increase the tension in the belt as shown in the images below. However, the tension needed wasn't able to be
-            maintained with this solution.</p>
+            <p>During our initial testing, I identified that the transmission ratio was too low, casuing our belt to slip under load. 
+              Our system lacked sufficient torque to overcome the mechanical resistance so we first tried to increase the tension in the belt as shown in the images below. However, the tension required for stable, reliable operation
+              was still greater than what this configuration could maintain.</p>
           </div>
           <div class="image-row">
             <div class = "image-container">
@@ -151,10 +151,10 @@
           </div>
            <div class = "project-two-col">
              <div class = "project-text">
-                <p>While my team tried to find (mostly brute force) methods to maintain the necessary tension for the following 1-2 days, I worked on the Arduino code for the assembly so we could jump into 
-                testing immediately once the mechanical issues were solved. However, we reached the night before and it still didn't function properly. I carefully raked through all the drawers in the lab again
-                to see what spare parts there were laying around that we could use. Pictured on the right &mdash; our saving grace. I found a gear that had the same teeth as ours but would increase our transmission ratio.
-                We had to modify it slightly (drill a hole through it to take out the press pin in it as shown on the right) but we were able to replace our gear with it easily. </p>
+                <p>As my teammates explored different approaches to maintain sufficient belt tension over the following days, I focused on developing and refining
+                  the Arduino control code so we could transition smoothly into testing once the system was ready. Yet, by the night before our final demonstration, the 
+                  assembly remained nonfunctional. Determined to resolve the issue, I combed through the lab's spare components and found a compatible gear with the same tooth profile but a smaller diameter to increase our transmission ratio. 
+                  After carefully modifying it by drilling out the press-fit pin (shown on the right), we replaced the original driving gear, allowing for full motion to the linkage and achieving reliable performance just in time. </p>
              </div>
              <div class = "project-media">
                <div class = "image-container">
@@ -164,7 +164,7 @@
              </div>
           </div>
           <div class = "project-full">
-            <h3 class = "mini-title sparkle-title">Success at last</h3>
+            <h3 class = "mini-title sparkle-title">Sweet Success</h3>
               <div class="video-container vertical">
                 <iframe 
                   src="https://www.youtube.com/embed/t_6y0Fk8vc0"
