--- a/projects.html
+++ b/projects.html
@@ -180,6 +180,14 @@
         <!-- Project 3 -->
         <div class="slide fade">
           <h3 class = "project-title">CloudBot | Bipedal Robot</h3>
+          <div class = "project-full">
+                <div class="project-media">
+                    <div class = "image-container">
+                        <img src = "images/robotfinal.jpeg" alt = "Robot Final">
+                        <div class = "caption">Final CloudBots</div>
+                      </div>
+                  </div>
+             </div>
             <div class = "project-two-col">
                 <div class="project-text">
                 <p>
