--- a/projects.html
+++ b/projects.html
@@ -228,20 +228,23 @@
           <div class = "project-full">
             <h3 class = "mini-title"> Iterating and Improving the Design</h3>
           </div>
-          <div class = "image-row">
-            <div class = "image-container">
-              <img src = "images/robotchassisnew.png" alt ="New Chassis">
-              <div class = "caption">New chassis design to decrease weight and improve wiring</div>
+          <div class="smart-gallery">
+            <div class="image-container">
+              <img src="images/robotchassisnew.png" alt="New Chassis">
+              <div class="caption">New chassis design to decrease weight and improve wiring</div>
             </div>
-            <div class = "image-container">
-              <img src = "images/robot2.jpg" alt = "Assembled Robot 2">
-              <div class ="caption"> Fully assembled robot with all parts </div>
+          
+            <div class="image-container">
+              <img src="images/robot2.jpg" alt="Assembled Robot 2">
+              <div class="caption">Fully assembled robot with all parts</div>
             </div>
-            <div class = "image-container">
-              <img src = "images/robot3.jpg" alt = Assembled Robot 3">
-              <div class = "caption"> Increased feet size to help stability </div>
+          
+            <div class="image-container">
+              <img src="images/robot3.jpg" alt="Assembled Robot 3">
+              <div class="caption">Increased feet size to help stability</div>
             </div>
           </div>
+
           <div class = "project-full">
             <h3 class = "mini-title sparkle-title">Final Walk</h3>
             <div class="project-media">
