--- a/projects.html
+++ b/projects.html
@@ -228,22 +228,23 @@
           <div class = "project-full">
             <h3 class = "mini-title"> Iterating and Improving the Design</h3>
           </div>
-          <div class="smart-gallery">
-            <div class="image-container">
+          <div class="robot-layout">
+            <div class="image-container large">
               <img src="images/robotchassisnew.png" alt="New Chassis">
               <div class="caption">New chassis design to decrease weight and improve wiring</div>
             </div>
           
-            <div class="image-container">
+            <div class="image-container small top-right">
               <img src="images/robot2.jpg" alt="Assembled Robot 2">
               <div class="caption">Fully assembled robot with all parts</div>
             </div>
           
-            <div class="image-container">
+            <div class="image-container small bottom-right">
               <img src="images/robot3.jpg" alt="Assembled Robot 3">
               <div class="caption">Increased feet size to help stability</div>
             </div>
           </div>
+
 
           <div class = "project-full">
             <h3 class = "mini-title sparkle-title">Final Walk</h3>
