--- a/projects.html
+++ b/projects.html
@@ -241,7 +241,7 @@
           
             <div class="image-container small bottom-right">
               <img src="images/robot3.jpg" alt="Assembled Robot 3">
-              <div class="caption">Increased feet size to help stability</div>
+              <div class="caption">Larger feet to improve stability</div>
             </div>
           </div>
 
